@@ -10,6 +10,7 @@
 .: WSM: Task: Customize item status (WSM-103)
 .: WSM: Task: CLONE - Add Item Type Concept into website (WSM-129)
 .: WSM: Task: Label import excel files (WSM-123)
+.: WSM: Task: Adding component displayed preview (WSM-77)
 
 ---------------------------------------------
 - 2020-06-12                                -
